# os_lab4

./: CMakeLists.txt
include/: common.h  logger.h
src/: receiver.cpp  sender.cpp
tests/: common_tests.cpp
